--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "This is the server side for Hlongwane Properties",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Junior Hlongwane",
   "license": "ISC",
