--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
-    "mongoose": "^5.10.6"
+    "mongoose": "^5.10.6",
+    "nodemailer": "^6.4.11"
   }
 }
